plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	mavenCentral()
	maven {
		url 'https://jitpack.io'
	}
	maven {
        name = "modrinth"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }
}

loom {
// 	splitEnvironmentSourceSets()

// 	mods {
// 		"kiwiclient" {
// 			sourceSet sourceSets.main
// 			sourceSet sourceSets.client
// 		}
// 	}

	runs {
        client {
            vmArg "-Ddevauth.enabled=true"
			vmArg "-Ddevauth.account=main"
        }
    }

	accessWidenerPath = file("src/main/resources/kiwiclient.classtweaker")
}

tasks {
    processResources {
        def buildNumber = providers.gradleProperty("build_number").getOrElse("")
        def commit = providers.gradleProperty("commit").getOrElse("")

        def propertyMap = [
            version           : project.version,
            build_number      : buildNumber,
            commit            : commit,
            minecraft_version : project.minecraft_version,
            loader_version    : project.loader_version
        ]

        inputs.properties(propertyMap)

        filesMatching("fabric.mod.json") {
            expand(propertyMap)
        }
    }
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	include(implementation("maven.modrinth:sodium:${project.sodium_version}"))

	implementation(files("discord-game-sdk4j-0067367ec5.jar"))
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}

	from {
		zipTree("discord-game-sdk4j-0067367ec5.jar")
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}